# microeggpy

./: .gitignore  Cargo.toml  Makefile  pyproject.toml
benches/: my_benchmark.rs
examples/: ac.json  profile_ac.rs
src/: backtrack.rs  base.rs  coegraph.rs  extract.rs  glattice.rs  lib.rs  macros.rs  prolog.rs  pthin.rs  thin.rs  uf.rs
tests/: test_microegg.py
