[package]
name = "microeggpy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "microeggpy"
crate-type = ["cdylib"]

[dependencies]
microegg = { git = "https://github.com/philzook58/microegg.git", branch = "microeggpy", version = "0.1.0" }
pyo3 = { version = "0.27.0", features = ["extension-module"] }
