[package]
name = "microegg"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "microegg"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
bitvec = "1.0.1"
pyo3 = { version = "0.27.0", features = ["extension-module"] }
